# AI-Shop-Assistant

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_gemini.py
backend/: main.py
backend/db/: mysql.py
backend/routes/: chat.py  products.py
backend/service/: gemini_chain.py  vector_store.py
data/: data_insertion.py
embedding/: sync_pinecone.py  test_model.py
frontend/: app.py
