[project]
name = "ai-assistant-shop-catalog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-google-genai>=4.2.7",
    "mysql-connector-python>=9.7.0",
    "pandas>=3.0.3",
    "pinecone-client>=6.0.0",
    "python-dotenv>=1.2.2",
    "tqdm>=4.68.4",
    "uvicorn>=0.51.0",
]
